# pathkeeper

./: .gitignore  .pre-commit-config.yaml  .pylintrc  .pylintrc_docs  .pylintrc_tests  .readthedocs.yaml  CHANGELOG.md  CONTRIBUTING.md  Makefile  README.md  SECURITY.md  checkmake.ini  mkdocs.yml  pyproject.toml
.claude/: settings.local.json
.github/workflows/: build.yml  lint.yml  publish_to_pypi.yml  tox.yml  zizmor.yml
docs/: CHANGELOG.md  CONTRIBUTING_TKINTER.md  PRIOR_ART.md  index.md  installation.md  requirements.txt
docs/extending/: API.md  CONTRIBUTING.md  extending.md
docs/overview/: README.md  who_is_this_for.md
docs/usage/: commands.md  config.md  usage.md  workflows.md
pathkeeper/: __about__.py  __init__.py  __main__.py  cli.py  config.py  errors.py  interactive.py  models.py  services.py  theme.py
pathkeeper/catalog/: known_tools.toml
pathkeeper/core/: backup.py  dedupe.py  diagnostics.py  diff.py  edit.py  executables.py  locate.py  path_reader.py  path_writer.py  populate.py  repair_truncated.py  runtime_diff.py  schedule.py  selfcheck.py  shadow.py  split_long.py
pathkeeper/gui/: app.py
pathkeeper/platform/: __init__.py  linux.py  macos.py  unix_common.py  windows.py
scripts/: check_wheel_contents.py
spec/: 00_SPECIFICATION.md  01_BRAINSTORM_IDEAS.md  02_IDEAS_PERFORMANCE_OBSERVABILITY.md  03_IDEAS_WINDOWS_DEEP_INTEGRATION.md  04_IDEAS_UNIX_AND_CROSS_PLATFORM.md  05_IDEAS_UX_AND_ADOPTION.md  06_new_features.md  90_BUGS.md  99_SHADOW_DIFF.md  notes.md
tests/: bench_startup.py  test_backup.py  test_cli.py  test_dedupe.py  test_diagnostics.py  test_diff.py  test_diff_current.py  test_doctor_explain.py  test_first_run_wizard.py  test_gui.py  test_hypothesis.py  test_locate.py  test_populate.py  test_repair_truncated.py  test_runtime_diff.py  test_schedule_windows.py  test_shadow.py  test_shell_startup.py  test_unix_platform.py
