[build-system]
requires = ["hatchling>=1.27.0"]
build-backend = "hatchling.build"

[project]
name = "pathkeeper"
version = "0.1.0"
description = "PATH backup, restore, and repair tool"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "pytable-formatter>=0.1.1",
]

[project.optional-dependencies]
completion = [
    "argcomplete>=3.3.0",
    "rich-argparse>=1.5.0",
    "totalhelp>=0.1.0",
]

[project.scripts]
pathkeeper = "pathkeeper.cli:main"

[project.gui-scripts]
pathkeeper-gui = "pathkeeper.gui.app:launch_gui"

[dependency-groups]
dev = [
  "mypy>=1.18.2",
  "pytest>=8.4.2",
  "tox>=4.0",
  "tox-uv>=1.0",
]

[tool.pytest.ini_options]
addopts = "-q -m 'not slow'"
testpaths = ["tests"]
markers = [
    "slow: performance benchmarks (run with -m slow)",
]

[tool.mypy]
python_version = "3.14"
strict = true
packages = ["pathkeeper", "tests"]

[tool.uv]
default-groups = ["dev"]

[tool.tox]
legacy_tox_ini = """
[tox]
min_version = 4.0
env_list = py313, py314, py315

[testenv]
deps =
    pytest>=8.4.2
    mypy>=1.18.2
commands =
    pytest {posargs}
    mypy pathkeeper tests
"""

